# RAG-implementation-practice

./: INTERVIEW_PROMPT.md  pyproject.toml  starter_code.py
documents/: data_classification_policy.txt  incident_response_procedures.txt  information_transmission_policy.txt  personnel_security_training.txt  removable_media_policy.txt
src/rag_implementation/: solution.py  starter_code.py
